# sudoku-unam

./: CMakeLists.txt  README.md  main.c
